--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/karinadb
 spring.datasource.username=root
 spring.datasource.password=password
 useSSL=false
+
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
