--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/karinadb
-spring.datasource.username=root
-spring.datasource.password=password
-useSSL=false
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/karinadb
+#spring.datasource.username=root
+#spring.datasource.password=password
+#useSSL=false
+#
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
 
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+
+spring.datasource.url=jdbc:h2:mem:exampledb
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=create
